@@ -3,13 +3,17 @@ package com.lantanagroup.link.validation.services;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.IParser;
 import com.azure.core.util.BinaryData;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.lantanagroup.link.shared.entities.PatientSubmissionModel;
 import com.lantanagroup.link.shared.kafka.Headers;
 import com.lantanagroup.link.shared.services.ReportClient;
+import com.lantanagroup.link.validation.configs.PreQualificationConfig;
 import com.lantanagroup.link.validation.entities.Category;
 import com.lantanagroup.link.validation.entities.Result;
 import com.lantanagroup.link.validation.records.ReadyForValidation;
 import com.lantanagroup.link.validation.records.ValidationComplete;
+import com.lantanagroup.link.validation.repositories.CategoryRepository;
+import com.lantanagroup.link.validation.repositories.CategoryRuleRepository;
 import com.lantanagroup.link.validation.repositories.ResultRepository;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.producer.ProducerRecord;
@@ -58,11 +62,18 @@ public class ReadyForValidationConsumerTest {
     private ReadyForValidationConsumer consumer;
     private ReadyForValidationConsumer consumerWithoutBlobStorage;
 
+    // Real instances (no deps); the flag defaults to false so the append path is off by default.
+    private PreQualificationConfig preQualificationConfig;
+    private PreQualOperationOutcomeBuilder preQualOperationOutcomeBuilder;
+
     private Bundle bundle;
 
     @BeforeEach
     @SuppressWarnings("unchecked")
     void setUp() throws Exception {
+        preQualificationConfig = new PreQualificationConfig();
+        preQualOperationOutcomeBuilder = new PreQualOperationOutcomeBuilder();
+
         consumer = new ReadyForValidationConsumer(
                 fhirContext,
                 reportClient,
@@ -72,6 +83,8 @@ public class ReadyForValidationConsumerTest {
                 validationCompleteTemplate,
                 validationMetrics,
                 Optional.of(blobStorageService),
+                preQualificationConfig,
+                preQualOperationOutcomeBuilder,
                 recoverer);
 
         consumerWithoutBlobStorage = new ReadyForValidationConsumer(
@@ -83,6 +96,8 @@ public class ReadyForValidationConsumerTest {
                 validationCompleteTemplate,
                 validationMetrics,
                 Optional.empty(),
+                preQualificationConfig,
+                preQualOperationOutcomeBuilder,
                 recoverer);
 
         bundle = new Bundle();
@@ -138,6 +153,13 @@ public class ReadyForValidationConsumerTest {
         Category category = new Category();
         category.setId(acceptable ? "acceptable-cat" : "unacceptable-cat");
         category.setAcceptable(acceptable);
+        return category;
+    }
+
+    private Category categoryWithSubmit(boolean submit) {
+        Category category = new Category();
+        category.setId(submit ? "submitted-cat" : "non-submitted-cat");
+        category.setSubmit(submit);
         return category;
     }
 
@@ -250,14 +272,67 @@ public class ReadyForValidationConsumerTest {
     }
 
     @Test
-    void process_savesAllResultsToRepository() throws Exception {
-        Result result = resultWithCategories(Collections.emptyList());
+    void process_savesOnlyResultsWithSubmitEnabledCategories() throws Exception {
+        Result submittedResult = resultWithCategories(List.of(categoryWithSubmit(true)));
+        Result nonSubmittedResult = resultWithCategories(List.of(categoryWithSubmit(false)));
+        Result uncategorizedResult = resultWithCategories(Collections.emptyList());
+        stubRestRetrieval();
+        when(validationService.validate(bundle)).thenReturn(List.of(submittedResult, nonSubmittedResult, uncategorizedResult));
+
+        consumer.process(buildRecord(null));
+
+        verify(resultRepository).saveAll(List.of(submittedResult));
+    }
+
+    @Test
+    void process_multiCategoryResultWithAnySubmitEnabledCategory_savesResult() throws Exception {
+        Result result = resultWithCategories(List.of(categoryWithSubmit(false), categoryWithSubmit(true)));
         stubRestRetrieval();
         when(validationService.validate(bundle)).thenReturn(List.of(result));
 
         consumer.process(buildRecord(null));
 
         verify(resultRepository).saveAll(List.of(result));
+    }
+
+    @Test
+    void process_noSubmitEnabledCategories_doesNotSaveResults() throws Exception {
+        Result nonSubmittedResult = resultWithCategories(List.of(categoryWithSubmit(false)));
+        Result uncategorizedResult = resultWithCategories(Collections.emptyList());
+        stubRestRetrieval();
+        when(validationService.validate(bundle)).thenReturn(List.of(nonSubmittedResult, uncategorizedResult));
+
+        consumer.process(buildRecord(null));
+
+        verify(resultRepository, never()).saveAll(anyList());
+    }
+
+    @Test
+    void process_inactiveCodeResult_isCategorizedAsInactiveCodeAndPersisted() throws Exception {
+        // Wire a real CategorizationService backed by the shipped categories.json so this exercises the
+        // actual message -> inactive_code category -> saveAll path for an inactive-code finding.
+        CategoryRepository categoryRepository = mock(CategoryRepository.class);
+        when(categoryRepository.findAll()).thenReturn(CategoryFixtures.loadShippedCategories());
+        CategorizationService realCategorizationService = new CategorizationService(
+                new ObjectMapper(), categoryRepository, mock(CategoryRuleRepository.class), resultRepository);
+
+        ReadyForValidationConsumer consumerWithRealCategorization = new ReadyForValidationConsumer(
+                fhirContext, reportClient, validationService, realCategorizationService, resultRepository,
+                validationCompleteTemplate, validationMetrics, Optional.of(blobStorageService),
+                preQualificationConfig, preQualOperationOutcomeBuilder, recoverer);
+
+        Result inactiveResult = new Result();
+        inactiveResult.setMessage("The concept '423666004' has a status of inactive and its use should be reviewed.");
+        inactiveResult.setExpression("Bundle.entry[0].resource.ofType(Encounter).type[0].coding[0]");
+        stubRestRetrieval();
+        when(validationService.validate(bundle)).thenReturn(List.of(inactiveResult));
+
+        consumerWithRealCategorization.process(buildRecord(null));
+
+        assertTrue(
+                inactiveResult.getCategories().stream().anyMatch(c -> "missing_active_encounter_type_code".equals(c.getId())),
+                "Inactive-code result should be categorized as inactive_code");
+        verify(resultRepository).saveAll(List.of(inactiveResult));
     }
 
     // -------------------------------------------------------------------------
@@ -423,5 +498,140 @@ public class ReadyForValidationConsumerTest {
 
         verify(validationMetrics).addToValidationCounter(any());
         verify(validationMetrics).recordValidationDuration(anyDouble(), any());
+    }
+
+    // -------------------------------------------------------------------------
+    // Pre-qualification OperationOutcome append
+    // -------------------------------------------------------------------------
+
+    /** Stubs the blob download path so the bundle is retrieved from ABS (not REST). */
+    private void stubBlobDownload() {
+        IParser parser = mock(IParser.class);
+        when(fhirContext.newNDJsonParser()).thenReturn(parser);
+        when(parser.parseResource(eq(Bundle.class), (InputStream) any())).thenReturn(bundle);
+        when(blobStorageService.download("myfile.ndjson")).thenReturn(BinaryData.fromBytes(new byte[0]));
+    }
+
+    @Test
+    void process_flagOn_submittedFindings_appendsOperationOutcomeToSameBlob() throws Exception {
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+        stubBlobDownload();
+
+        IParser jsonParser = mock(IParser.class);
+        when(fhirContext.newJsonParser()).thenReturn(jsonParser);
+        when(jsonParser.encodeResourceToString(any()))
+                .thenReturn("{\"resourceType\":\"OperationOutcome\"}");
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        result.setMessage("Code is inactive.");
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService).appendResource("myfile.ndjson", "{\"resourceType\":\"OperationOutcome\"}");
+    }
+
+    @Test
+    void process_flagOff_submittedFindings_doesNotAppend() throws Exception {
+        stubBlobDownload(); // flag defaults to false
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService, never()).appendResource(anyString(), anyString());
+    }
+
+    @Test
+    void process_flagOn_noSubmittedFindings_doesNotAppend() throws Exception {
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+        stubBlobDownload();
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(false)));
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService, never()).appendResource(anyString(), anyString());
+    }
+
+    @Test
+    void process_flagOn_bundleAlreadyHasPreQualOperationOutcome_doesNotAppendAgain() throws Exception {
+        // Replay: AsyncListener acknowledges the offset even when process() throws, so a failure after the
+        // append (producing ValidationComplete, say) routes the record to the retry topic and process()
+        // runs again. The re-read bundle then already contains the OperationOutcome we appended, and we
+        // must not append a second one.
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+
+        org.hl7.fhir.r4.model.OperationOutcome existing = new org.hl7.fhir.r4.model.OperationOutcome();
+        existing.addExtension(new org.hl7.fhir.r4.model.Extension(
+                PreQualOperationOutcomeBuilder.OO_TOTAL_URL, new org.hl7.fhir.r4.model.IntegerType(1)));
+        bundle.addEntry().setResource(existing);
+
+        stubBlobDownload();
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        result.setMessage("Code is inactive.");
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService, never()).appendResource(anyString(), anyString());
+    }
+
+    @Test
+    void process_flagOn_bundleHasUnrelatedOperationOutcome_stillAppends() throws Exception {
+        // The Report service's legacy flat OperationOutcome carries no oo-total extension, so it must not
+        // be mistaken for ours and suppress the append.
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+
+        org.hl7.fhir.r4.model.OperationOutcome legacy = new org.hl7.fhir.r4.model.OperationOutcome();
+        legacy.addIssue().setDiagnostics("Patient has failed Validation");
+        bundle.addEntry().setResource(legacy);
+
+        stubBlobDownload();
+
+        IParser jsonParser = mock(IParser.class);
+        when(fhirContext.newJsonParser()).thenReturn(jsonParser);
+        when(jsonParser.encodeResourceToString(any())).thenReturn("{\"resourceType\":\"OperationOutcome\"}");
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        result.setMessage("Code is inactive.");
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService).appendResource("myfile.ndjson", "{\"resourceType\":\"OperationOutcome\"}");
+    }
+
+    @Test
+    void process_flagOn_noBlobService_doesNotAppend() throws Exception {
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+        stubRestRetrieval(); // no blob service -> bundle comes via REST, append is skipped
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumerWithoutBlobStorage.process(buildRecord(PAYLOAD_URI));
+
+        verify(blobStorageService, never()).appendResource(anyString(), anyString());
+    }
+
+    @Test
+    void process_flagOn_nullPayloadUri_doesNotAppend() throws Exception {
+        // Blob storage IS configured here, unlike the test above; only the payloadUri is missing. This
+        // covers the second operand of the append guard on its own - drop it and BlobUrlParts.parse(null)
+        // throws, so the two operands need separate coverage.
+        preQualificationConfig.setWritePreQualOperationOutcome(true);
+        stubRestRetrieval(); // no payload URI -> bundle comes via REST
+
+        Result result = resultWithCategories(List.of(categoryWithSubmit(true)));
+        result.setMessage("Code is inactive.");
+        when(validationService.validate(bundle)).thenReturn(List.of(result));
+
+        consumer.process(buildRecord(null));
+
+        verify(blobStorageService, never()).appendResource(anyString(), anyString());
     }
 }
